# Project-version-1

./: CMakeLists.txt  CMakeLists.txt.user.1b54d23  README.md  Trail.py  benzene.cpp  benzene.h  commands.cpp  commands.h  custom_view.cpp  custom_view.h  doubleclickbutton.h  editablelineitem.h  editablepixmapitem.cpp  editablepixmapitem.h  formula_dialog.cpp  formula_dialog.h  formula_dialog.ui  hexagon.cpp  hexagon.h  horizontalruler.cpp  horizontalruler.h  hoverellipseitem.cpp  hoverellipseitem.h  lineitem.cpp  lineitem.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mygraphicsview.cpp  mygraphicsview.h  myrectitem.cpp  myrectitem.h  number.cpp  number.h  number.ui  painterapptypes.h  pentagon.cpp  pentagon.h  periodic_tdialog.cpp  periodic_tdialog.h  (+22 more)
